--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -3,11 +3,12 @@ workflows:
     name: Android Workflow
     triggering:
       events:
+        - push
         - pull_request
       branch_patterns:
         - pattern: 'main'
           include: true
-          source: false
+          source: true
     max_build_duration: 120
     environment:
       android_signing:
